:lipstick: Header icon alignment fix

--- a/src/app/front/components/header/header.component.scss
+++ b/src/app/front/components/header/header.component.scss
@@ -86,3 +86,9 @@ header {
 .padding {
   padding-top: 100px;
 }
+
+fa-icon {
+  display: flex;
+  height: 19px;
+  margin-left: 2px;
+}
